[package]
name = "slack_echo_bot"
version = "0.1.0"
authors = ["Michael Edwards <medwards@walledcity.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
slack-morphism-models = "0.5.5"
slack-morphism-hyper = "0.5.5"
slack-morphism = "0.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.4"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
hyper = { version ="0.14", features = ["full"] }
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
rsb_derive = "0.3"

[package.metadata.release]
disable-tag=true
